--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <li> May 25, 2024 &nbsp;|&nbsp; Cathedral Bluffs Symphony Orchestra </li>
           <li> May 18, 2024 &nbsp;|&nbsp; Embassy of Kosovo, Greater Toronto Philharmonic Orchestra, soloist Rame Lahaj </li>
           <li> May 11, 2024 &nbsp;|&nbsp; Greater Toronto Philharmonic Orchestra </li>
-          <li> Apr 27, 2024 &nbsp;|&nbsp; North York Concert Orchestra </li>
+          <li> Apr 27, 2024 &nbsp;|&nbsp; North York Concert Orchestra, soloist Rashaan Allwood </li>
           <li> Apr 20, 2024 &nbsp;|&nbsp; Cathedral Bluffs Symphony Orchestra </li>
           <li> Apr 14, 2024 &nbsp;|&nbsp; Orchestra Toronto </li>
           <li> Apr 5, 2024 &nbsp;|&nbsp; University of Toronto Campus Philharmonic </li>
@@ -246,9 +246,9 @@
               I am a percussionist based in the Greater Toronto Area, specializing in orchestral music. 
               I have performed with numerous organizations such as the Greater Toronto Philharmonic Orchestra, Orchestra Toronto, Kindred Spirits Orchestra, and Cathedral Bluffs Symphony Orchestra.
             <br><br>
-            I’ve had the opportunity to perform alongside renowned soloists like Jonathan Crow, Yolanda Bruno, and Rame Lahaj, as well as conductors including Charles Cozens, David Fallis, and Martin MacDonald. 
-            Notable performances include the Yellow River Cantata 85th Anniversary Premiere, the world premiere of Canadian Composer Joel Toews’ Fanfare 401, 
-            the Embassy of Kosovo’s 25th-anniversary event commemorating Canada’s support for 7000 refugees, and a holiday concert hosted by the Embassy of the Republic of Albania.
+            I’ve had the opportunity to perform with renowned soloists like Jonathan Crow, Michael Berkovsky,<!--Yolanda Bruno,--> and Rame Lahaj, as well as conductors including Charles Cozens, David Fallis, and Martin MacDonald. 
+            Notable performances include the Yellow River Cantata 85th Anniversary Premiere, the world premiere of Canadian Composer Joel Toews’ Fanfare 401, and
+            the Embassy of Kosovo’s 25th-anniversary event commemorating Canada’s support for 7000 refugees. <!-- and a holiday concert hosted by the Embassy of the Republic of Albania. -->
             <br><br>
             I hold an Honours Bachelor of Science in Mathematics with a Minor in Music, and currently study privately with Dr. Michelle Colton.
             Beyond percussion, I am a drum kit player and band leader at Toronto Community Alliance Church, and was an Electric Bassist for the Concert Band Association of Ryerson University.
